--- a/UI/WebStore_2020/WebStore.csproj
+++ b/UI/WebStore_2020/WebStore.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\WebStore.DomainNew\WebStore.DomainNew.csproj" />
     <ProjectReference Include="..\..\Services\WebStore.DAL\WebStore.DAL.csproj" />
+    <ProjectReference Include="..\..\Services\WebStore.Interfaces\WebStore.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
