--- a/Services/WebStore.ServicesHosting/appsettings.json
+++ b/Services/WebStore.ServicesHosting/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Initial Catalog=WebStore_3;Trusted_Connection=True;Connection Timeout=30;"
+  },
+
+
+
+    "AllowedHosts": "*"
+  }
