--- a/Services/WebStore.ServicesHosting/appsettings.json
+++ b/Services/WebStore.ServicesHosting/appsettings.json
@@ -8,10 +8,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Initial Catalog=WebStore_3;Trusted_Connection=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=DESKTOP-O51730H; user=sa; password=smik; Initial Catalog=WebStore_3"
   },
 
-
-
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
