2-2 Исправлена ошибка в OrderClient, переработан CartController

--- a/Services/WebStore.ServicesHosting/appsettings.json
+++ b/Services/WebStore.ServicesHosting/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-O51730H; user=sa; password=smik; Initial Catalog=WebStore_3"
+    "DefaultConnection": "Server=.;Initial Catalog=WebStore_3;Trusted_Connection=True;Connection Timeout=30;"
   },
 
   "AllowedHosts": "*"
