--- a/Services/WebStore.ServicesHosting/WebStore.ServicesHosting.csproj
+++ b/Services/WebStore.ServicesHosting/WebStore.ServicesHosting.csproj
@@ -16,10 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\WebStore.DomainNew\WebStore.DomainNew.csproj" />
-    <ProjectReference Include="..\..\UI\WebStore_2020\WebStore.csproj" />
     <ProjectReference Include="..\WebStore.Clients\WebStore.Clients.csproj" />
     <ProjectReference Include="..\WebStore.DAL\WebStore.DAL.csproj" />
     <ProjectReference Include="..\WebStore.Interfaces\WebStore.Interfaces.csproj" />
+    <ProjectReference Include="..\WebStore.Services\WebStore.Services.csproj" />
   </ItemGroup>
 
 
