--- a/UI/WebStore_2020/WebStore.csproj
+++ b/UI/WebStore_2020/WebStore.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Infrastructure\Services\CookieCartService.cs" />
+    <Compile Remove="Infrastructure\Services\InMemoryEmployeeService.cs" />
+    <Compile Remove="Infrastructure\Services\InMemoryProductService.cs" />
+    <Compile Remove="Infrastructure\Services\SqlOrdersService.cs" />
+    <Compile Remove="Infrastructure\Services\SqlProductService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.447" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
@@ -16,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +32,7 @@
     <ProjectReference Include="..\..\Services\WebStore.Clients\WebStore.Clients.csproj" />
     <ProjectReference Include="..\..\Services\WebStore.DAL\WebStore.DAL.csproj" />
     <ProjectReference Include="..\..\Services\WebStore.Interfaces\WebStore.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Services\WebStore.Services\WebStore.Services.csproj" />
   </ItemGroup>
 
 </Project>
