--- a/UI/WebStore_2020/log4net.config
+++ b/UI/WebStore_2020/log4net.config
@@ -8,7 +8,7 @@
 
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <file type="log4net.Util.PatternString"
-       value="/Logs/%date{yyyy}/%date{MM}/%date{MM}/%date{dd}/WebStore-Ui.log" />
+       value="Logs/%date{yyyy}/%date{MM}/%date{MM}/%date{dd}/WebStore-Ui.log" />
     <appendToFile value="true"/>
     <maximumFileSize value="50MB" />
     <maxSizeRollBackups value="-1" />
@@ -19,7 +19,7 @@
     </layout>
   </appender>
   <root>
-    <priority value = "ERROR" />
+    <priority value = "INFO" />
     <appender-ref ref="RollingFileAppender" />
   </root>
 </log4net>
