2-7 Добавлено постраничное разделение товаров

--- a/UI/WebStore_2020/appsettings.json
+++ b/UI/WebStore_2020/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "CustomHelloWorld": "Hello world from config file.",
-  "ClientAddress": "http://localhost:49217"
+  "ClientAddress": "http://localhost:49217",
+  "PageSize": "3"
 }
