--- a/UI/WebStore_2020/bundleconfig.json
+++ b/UI/WebStore_2020/bundleconfig.json
@@ -14,12 +14,13 @@
     },
     {
         "outputFileName": "wwwroot/js/site.min.js",
-        "inputFiles": [
-            "wwwroot/js/price-range.js",
-            "wwwroot/js/jquery.prettyPhoto.js",
-          "wwwroot/js/main.js",
-          "wwwroot/js/cart/cartLogic.js"
-        ],
+      "inputFiles": [
+        "wwwroot/js/price-range.js",
+        "wwwroot/js/jquery.prettyPhoto.js",
+        "wwwroot/js/main.js",
+        "wwwroot/js/cartLogic.js",
+        "wwwroot/js/productItems.js"
+      ],
         // Optionally specify minification options
         "minify": {
             "enabled": true,
