2-8 Добавлен вход в админку

--- a/UI/WebStore_2020/appsettings.json
+++ b/UI/WebStore_2020/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "CustomHelloWorld": "Hello world from config file.",
   "ClientAddress": "http://localhost:49217",
-  "PageSize": "3"
+  "PageSize": "3",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Initial Catalog=WebStore_3;Trusted_Connection=True;Connection Timeout=30;"
+  }
 }
